[package]
name = "rr-shuttle-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
shuttle-shared-db = { version = "0.39", features = ["postgres", "sqlx"] }
sqlx = "0.7"
